  * optimization: faster foreign callbacks.
  * enhancement: complex arrays can be stack allocated.
  * optimization: the register allocation method used by the compiler when
    optimizing for speed is now faster for functions with large bodies.
  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION works on big-endian CPUs
    (fixes lp#490490 for real rather than by disabling a test)

changes in sbcl-1.4.0 relative to sbcl-1.3.21:
  * minor incompatible change: DESTRUCTURING-BIND treats non-toplevel () as
    nested empty pattern. This seems to be what the standard mandates, so
    conforming code should not be affected.
  * ehancement: (GC :GEN 7) with gencgc will zero-fill dead pseudo-static
    objects so that they do not spuriously cause reachability of objects that
    would have been otherwise dead.
  * enhancement: PROCESS-STATUS now tracks stopped and continued processes
    properly (also fixes lp#1624941, based on patch by Elias Pipping).
  * bug fix: INSPECT handles errors signaled while printing slot
    values. (lp#454682)
  * bug fix: DESCRIBE works on classes like it used to.
  * bug fix: *LOAD-PATHNAME* and *LOAD-TRUENAME* are bound to pathnames
    when processing a sysinit or userinit file
  * bug fix: save-lisp-and-die is able to collect more garbage on non-x86oid
    gencgc targets.
  * bug fix: fixed out-of-bounds array read in optimized POSITION on bit-vectors
  * bug fix: signal emulation respects the 128-byte stack red zone on x86-64
    macOS.

changes in sbcl-1.3.21 relative to sbcl-1.3.20:
  * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
    has been removed after a 15 year deprecation cycle. Use the new name,
    RECKLESSLY-CONTINUE. Note also that this restart is hidden if deemed unsafe
    due to altered placement of untagged slots in the structure.
  * enhancement: the assignment of -DSBCL_PREFIX= in src/runtime/GNUmakefile
    can be removed as a local patch, which results in an sbcl executable